--- a/package.json
+++ b/package.json
@@ -6,16 +6,19 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:prod": "node build-production.js",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@supabase/supabase-js": "^2.39.7",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-intersection-observer": "^9.8.1"
+    "react-intersection-observer": "^9.15.1",
+    "react-markdown": "^10.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
